tests/sksl/errors/golden/ModifiersInStruct.glsl
### Compilation failed:

error: 1: modifier 'const' is not permitted on a struct field
error: 1: modifier 'uniform' is not permitted on a struct field
error: 1: modifier 'flat' is not permitted on a struct field
error: 1: modifier 'noperspective' is not permitted on a struct field
error: 1: modifier 'coherent volatile restrict buffer varying inout' is not permitted on a struct field
5 errors
